syntax = "proto3";

package api.v1;

import "google/api/annotations.proto";

option go_package = "goods/api/v1;v1";

service Goods {
  rpc CreateGoods (CreateGoodsRequest) returns (Model){
    option(google.api.http) = {
      post:"v1",
      body:"*"
    };
  }
  rpc UpdateGoods (UpdateGoodsRequest) returns (Model){
    option(google.api.http) = {
      put:"v1",
      body:"*"
    };
  }
  rpc DeleteGoods (DeleteGoodsRequest) returns (DeleteGoodsReply){
    option(google.api.http) = {
      delete:"v1/{id}",
    };
  }
  rpc GetGoods (GetGoodsRequest) returns (Model){
    option(google.api.http) = {
      get:"v1/{id}"
    };
  }
  rpc ListGoods (ListGoodsRequest) returns (ListGoodsReply){
    option(google.api.http) = {
      get:"v1/goods/list",
    };
  }
}

message CreateGoodsRequest {
  string name = 1;
  double price = 2;
  int64 count = 3;
}

message UpdateGoodsRequest {
  string name = 1;
  double price = 2;
  int64 count = 3;
}

message DeleteGoodsRequest {
  int64 id = 1;
}

message DeleteGoodsReply {}

message GetGoodsRequest {
  int64 id = 1;
}

message Model {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int64 count = 4;
}

message ListGoodsRequest {
  int64 page = 1;
  int64 size = 2;
}

message ListGoodsReply {
  repeated Model list = 1;
  int64 count = 2;
  int64 maxPage = 3;
}